import("//build_overrides/llvm.gni")

static_library("clang-apply-replacements") {
  output_name = "clangApplyReplacements"
  configs += [ "//${llvm_build_root}/build:clang_code" ]
  deps = [
    "//${llvm_build_root}/secondary/clang/lib/AST",
    "//${llvm_build_root}/secondary/clang/lib/Basic",
    "//${llvm_build_root}/secondary/clang/lib/Rewrite",
    "//${llvm_build_root}/secondary/clang/lib/Tooling/Core",
    "//${llvm_build_root}/secondary/clang/lib/Tooling/Refactoring",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  include_dirs = [ "include" ]
  sources = [ "lib/Tooling/ApplyReplacements.cpp" ]
}
