import("//build_overrides/llvm.gni")

static_library("clang-doc") {
  output_name = "clangDoc"
  configs += [ "//${llvm_build_root}/build:clang_code" ]
  deps = [
    "//${llvm_build_root}/secondary/clang/lib/AST",
    "//${llvm_build_root}/secondary/clang/lib/ASTMatchers",
    "//${llvm_build_root}/secondary/clang/lib/Analysis",
    "//${llvm_build_root}/secondary/clang/lib/Basic",
    "//${llvm_build_root}/secondary/clang/lib/Frontend",
    "//${llvm_build_root}/secondary/clang/lib/Index",
    "//${llvm_build_root}/secondary/clang/lib/Lex",
    "//${llvm_build_root}/secondary/clang/lib/Tooling",
    "//${llvm_build_root}/secondary/clang/lib/Tooling/Core",
    "//${llvm_build_root}/secondary/llvm/lib/Bitcode/Reader",
    "//${llvm_build_root}/secondary/llvm/lib/Bitcode/Writer",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  sources = [
    "BitcodeReader.cpp",
    "BitcodeWriter.cpp",
    "ClangDoc.cpp",
    "Generators.cpp",
    "HTMLGenerator.cpp",
    "MDGenerator.cpp",
    "Mapper.cpp",
    "Representation.cpp",
    "Serialize.cpp",
    "YAMLGenerator.cpp",
  ]
}
