import("//build_overrides/llvm.gni")

static_library("clang-include-fixer") {
  output_name = "clangIncludeFixer"
  configs += [ "//${llvm_build_root}/build:clang_code" ]
  deps = [
    "//${llvm_build_root}/secondary/clang-tools-extra/clang-include-fixer/find-all-symbols",
    "//${llvm_build_root}/secondary/clang/lib/AST",
    "//${llvm_build_root}/secondary/clang/lib/Basic",
    "//${llvm_build_root}/secondary/clang/lib/Format",
    "//${llvm_build_root}/secondary/clang/lib/Frontend",
    "//${llvm_build_root}/secondary/clang/lib/Lex",
    "//${llvm_build_root}/secondary/clang/lib/Parse",
    "//${llvm_build_root}/secondary/clang/lib/Sema",
    "//${llvm_build_root}/secondary/clang/lib/Serialization",
    "//${llvm_build_root}/secondary/clang/lib/Tooling",
    "//${llvm_build_root}/secondary/clang/lib/Tooling/Core",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  sources = [
    "FuzzySymbolIndex.cpp",
    "InMemorySymbolIndex.cpp",
    "IncludeFixer.cpp",
    "IncludeFixerContext.cpp",
    "SymbolIndexManager.cpp",
    "YamlSymbolIndex.cpp",
  ]
}
