import("//build_overrides/llvm.gni")

static_library("clang-query") {
  output_name = "clangQuery"
  configs += [ "//${llvm_build_root}/build:clang_code" ]
  deps = [
    "//${llvm_build_root}/secondary/clang/lib/AST",
    "//${llvm_build_root}/secondary/clang/lib/ASTMatchers",
    "//${llvm_build_root}/secondary/clang/lib/ASTMatchers/Dynamic",
    "//${llvm_build_root}/secondary/clang/lib/Basic",
    "//${llvm_build_root}/secondary/clang/lib/Frontend",
    "//${llvm_build_root}/secondary/clang/lib/Serialization",
    "//${llvm_build_root}/secondary/llvm/lib/LineEditor",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  sources = [
    "Query.cpp",
    "QueryParser.cpp",
  ]
}
