import("//build_overrides/llvm.gni")

import("//${llvm_build_root}/secondary/llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":COFF" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("COFF") {
  output_name = "lldCOFF"
  configs += [ "//${llvm_build_root}/build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_build_root}/secondary/lld/Common",
    "//${llvm_build_root}/secondary/llvm/lib/BinaryFormat",
    "//${llvm_build_root}/secondary/llvm/lib/DebugInfo/CodeView",
    "//${llvm_build_root}/secondary/llvm/lib/DebugInfo/MSF",
    "//${llvm_build_root}/secondary/llvm/lib/DebugInfo/PDB",
    "//${llvm_build_root}/secondary/llvm/lib/IR",
    "//${llvm_build_root}/secondary/llvm/lib/LTO",
    "//${llvm_build_root}/secondary/llvm/lib/MC",
    "//${llvm_build_root}/secondary/llvm/lib/Object",
    "//${llvm_build_root}/secondary/llvm/lib/Option",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
    "//${llvm_build_root}/secondary/llvm/lib/Target:TargetsToBuild",
    "//${llvm_build_root}/secondary/llvm/lib/TargetParser",
    "//${llvm_build_root}/secondary/llvm/lib/ToolDrivers/llvm-lib:LibDriver",
    "//${llvm_build_root}/secondary/llvm/lib/WindowsDriver",
    "//${llvm_build_root}/secondary/llvm/lib/WindowsManifest",
  ]
  sources = [
    "COFFLinkerContext.cpp",
    "CallGraphSort.cpp",
    "Chunks.cpp",
    "DLL.cpp",
    "DebugTypes.cpp",
    "Driver.cpp",
    "DriverUtils.cpp",
    "ICF.cpp",
    "InputFiles.cpp",
    "LLDMapFile.cpp",
    "LTO.cpp",
    "MapFile.cpp",
    "MarkLive.cpp",
    "MinGW.cpp",
    "PDB.cpp",
    "SymbolTable.cpp",
    "Symbols.cpp",
    "Writer.cpp",
  ]
}
