import("//build_overrides/llvm.gni")

import("//${llvm_build_root}/secondary/llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":MachO" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("MachO") {
  output_name = "lldMachO"
  configs += [ "//${llvm_build_root}/build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_build_root}/secondary/lld/Common",
    "//${llvm_build_root}/secondary/llvm/lib/BinaryFormat",
    "//${llvm_build_root}/secondary/llvm/lib/Object",
    "//${llvm_build_root}/secondary/llvm/lib/Option",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
    "//${llvm_build_root}/secondary/llvm/lib/Target:TargetsToBuild",
    "//${llvm_build_root}/secondary/llvm/lib/TargetParser",
  ]
  include_dirs = [
    ".",
    "//${llvm_build_root}/secondary/libunwind/include",
  ]
  sources = [
    "Arch/ARM64.cpp",
    "Arch/ARM64Common.cpp",
    "Arch/ARM64_32.cpp",
    "Arch/X86_64.cpp",
    "ConcatOutputSection.cpp",
    "Driver.cpp",
    "DriverUtils.cpp",
    "Dwarf.cpp",
    "EhFrame.cpp",
    "ExportTrie.cpp",
    "ICF.cpp",
    "InputFiles.cpp",
    "InputSection.cpp",
    "LTO.cpp",
    "MapFile.cpp",
    "MarkLive.cpp",
    "ObjC.cpp",
    "OutputSection.cpp",
    "OutputSegment.cpp",
    "Relocations.cpp",
    "SectionPriorities.cpp",
    "SymbolTable.cpp",
    "Symbols.cpp",
    "SyntheticSections.cpp",
    "Target.cpp",
    "UnwindInfoSection.cpp",
    "Writer.cpp",
  ]
}
