import("//build_overrides/llvm.gni")

import("//${llvm_build_root}/secondary/llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":MinGW" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("MinGW") {
  output_name = "lldMinGW"
  configs += [ "//${llvm_build_root}/build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_build_root}/secondary/lld/COFF",
    "//${llvm_build_root}/secondary/lld/Common",
    "//${llvm_build_root}/secondary/llvm/lib/Option",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
    "//${llvm_build_root}/secondary/llvm/lib/TargetParser",
  ]
  sources = [ "Driver.cpp" ]
}
