import("//build_overrides/llvm.gni")

import("//${llvm_build_root}/secondary/llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":wasm" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("wasm") {
  output_name = "lldWasm"
  configs += [ "//${llvm_build_root}/build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_build_root}/secondary/lld/Common",
    "//${llvm_build_root}/secondary/llvm/lib/BinaryFormat",
    "//${llvm_build_root}/secondary/llvm/lib/Demangle",
    "//${llvm_build_root}/secondary/llvm/lib/IR",
    "//${llvm_build_root}/secondary/llvm/lib/Object",
    "//${llvm_build_root}/secondary/llvm/lib/Option",
    "//${llvm_build_root}/secondary/llvm/lib/TargetParser",
  ]
  sources = [
    "Driver.cpp",
    "InputChunks.cpp",
    "InputFiles.cpp",
    "LTO.cpp",
    "MapFile.cpp",
    "MarkLive.cpp",
    "OutputSections.cpp",
    "OutputSegment.cpp",
    "Relocations.cpp",
    "SymbolTable.cpp",
    "Symbols.cpp",
    "SyntheticSections.cpp",
    "Writer.cpp",
    "WriterUtils.cpp",
  ]
}
