import("//build_overrides/llvm.gni")

static_library("Core") {
  output_name = "LLVMBOLTCore"
  configs += [ "//${llvm_build_root}/build:bolt_code" ]
  deps = [
    "//${llvm_build_root}/secondary/bolt/lib/Utils",
    "//${llvm_build_root}/secondary/llvm/lib/BinaryFormat",
    "//${llvm_build_root}/secondary/llvm/lib/CodeGen/AsmPrinter",
    "//${llvm_build_root}/secondary/llvm/lib/DebugInfo/DWARF",
    "//${llvm_build_root}/secondary/llvm/lib/Demangle",
    "//${llvm_build_root}/secondary/llvm/lib/MC",
    "//${llvm_build_root}/secondary/llvm/lib/MC/MCDisassembler",
    "//${llvm_build_root}/secondary/llvm/lib/Object",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
    "//${llvm_build_root}/secondary/llvm/lib/TargetParser",
    "//${llvm_build_root}/build/libs/pthread",
  ]
  sources = [
    "BinaryBasicBlock.cpp",
    "BinaryContext.cpp",
    "BinaryData.cpp",
    "BinaryEmitter.cpp",
    "BinaryFunction.cpp",
    "BinaryFunctionProfile.cpp",
    "BinarySection.cpp",
    "DIEBuilder.cpp",
    "DebugData.cpp",
    "DynoStats.cpp",
    "Exceptions.cpp",
    "FunctionLayout.cpp",
    "HashUtilities.cpp",
    "JumpTable.cpp",
    "MCPlusBuilder.cpp",
    "ParallelUtilities.cpp",
    "Relocation.cpp",
  ]
}
