import("//build_overrides/llvm.gni")

static_library("Profile") {
  output_name = "LLVMBOLTProfile"
  configs += [ "//${llvm_build_root}/build:bolt_code" ]
  deps = [
    "//${llvm_build_root}/secondary/bolt/lib/Core",
    "//${llvm_build_root}/secondary/bolt/lib/Passes",
    "//${llvm_build_root}/secondary/bolt/lib/Utils",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  sources = [
    "BoltAddressTranslation.cpp",
    "DataAggregator.cpp",
    "DataReader.cpp",
    "Heatmap.cpp",
    "ProfileReaderBase.cpp",
    "StaleProfileMatching.cpp",
    "YAMLProfileReader.cpp",
    "YAMLProfileWriter.cpp",
  ]
}
