import("//build_overrides/llvm.gni")

static_library("RuntimeLibs") {
  output_name = "LLVMBOLTRuntimeLibs"
  configs += [ "//${llvm_build_root}/build:bolt_code" ]
  deps = [
    "//${llvm_build_root}/secondary/bolt/include/bolt/RuntimeLibs:RuntimeLibraryVariables",
    "//${llvm_build_root}/secondary/bolt/lib/Core",
    "//${llvm_build_root}/secondary/bolt/lib/Passes",
    "//${llvm_build_root}/secondary/bolt/lib/Utils",
    "//${llvm_build_root}/secondary/llvm/lib/BinaryFormat",
    "//${llvm_build_root}/secondary/llvm/lib/ExecutionEngine/JITLink",
    "//${llvm_build_root}/secondary/llvm/lib/MC",
    "//${llvm_build_root}/secondary/llvm/lib/Object",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  include_dirs = [ target_gen_dir ]
  sources = [
    "HugifyRuntimeLibrary.cpp",
    "InstrumentationRuntimeLibrary.cpp",
    "RuntimeLibrary.cpp",
  ]
}
