import("//build_overrides/llvm.gni")

executable("llvm-bat-dump") {
  configs += [ "//${llvm_build_root}/build:bolt_code" ]
  deps = [
    "//${llvm_build_root}/secondary/bolt/lib/Profile",
    "//${llvm_build_root}/secondary/llvm/lib/Object",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  sources = [ "bat-dump.cpp" ]
}
