import("//build_overrides/llvm.gni")

executable("llvm-bolt-heatmap") {
  configs += [ "//${llvm_build_root}/build:bolt_code" ]
  deps = [
    "//${llvm_build_root}/secondary/bolt/lib/Profile",
    "//${llvm_build_root}/secondary/bolt/lib/Rewrite",
    "//${llvm_build_root}/secondary/bolt/lib/Utils",
    "//${llvm_build_root}/secondary/llvm/lib/MC",
    "//${llvm_build_root}/secondary/llvm/lib/Object",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
    "//${llvm_build_root}/secondary/llvm/lib/Target:TargetsToBuild",
  ]
  sources = [ "heatmap.cpp" ]
}
