import("//build_overrides/llvm.gni")

executable("merge-fdata") {
  configs += [ "//${llvm_build_root}/build:bolt_code" ]
  deps = [
    "//${llvm_build_root}/secondary/llvm/include/llvm/IR:public_tablegen",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  sources = [ "merge-fdata.cpp" ]

  # Emit relocations for BOLT meta test
  # (bolt/test/runtime/meta-merge-fdata.test)
  if (current_os == "linux") {
    ldflags = [ "-Wl,--emit-relocs" ]
  }
}
