import("//build_overrides/llvm.gni")

executable("clang-apply-replacements") {
  configs += [ "//${llvm_build_root}/build:clang_code" ]
  deps = [
    "//${llvm_build_root}/secondary/clang-tools-extra/clang-apply-replacements",
    "//${llvm_build_root}/secondary/clang/lib/Basic",
    "//${llvm_build_root}/secondary/clang/lib/Format",
    "//${llvm_build_root}/secondary/clang/lib/Rewrite",
    "//${llvm_build_root}/secondary/clang/lib/Tooling/Core",
    "//${llvm_build_root}/secondary/clang/lib/Tooling/Refactoring",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  include_dirs = [ "../include" ]
  sources = [ "ClangApplyReplacementsMain.cpp" ]
}
