import("//build_overrides/llvm.gni")

static_library("find-all-symbols") {
  output_name = "findAllSymbols"
  configs += [ "//${llvm_build_root}/build:clang_code" ]
  deps = [
    "//${llvm_build_root}/secondary/clang/lib/AST",
    "//${llvm_build_root}/secondary/clang/lib/ASTMatchers",
    "//${llvm_build_root}/secondary/clang/lib/Basic",
    "//${llvm_build_root}/secondary/clang/lib/Frontend",
    "//${llvm_build_root}/secondary/clang/lib/Lex",
    "//${llvm_build_root}/secondary/clang/lib/Tooling",
    "//${llvm_build_root}/secondary/llvm/lib/Support",
  ]
  sources = [
    "FindAllMacros.cpp",
    "FindAllSymbols.cpp",
    "FindAllSymbolsAction.cpp",
    "HeaderMapCollector.cpp",
    "PathConfig.cpp",
    "PragmaCommentHandler.cpp",
    "STLPostfixHeaderMap.cpp",
    "SymbolInfo.cpp",
  ]
}
