import("//build_overrides/llvm.gni")

static_library("plugin") {
  output_name = "clangIncludeFixerPlugin"
  configs += [ "//${llvm_build_root}/build:clang_code" ]
  deps = [
    "//${llvm_build_root}/secondary/clang-tools-extra/clang-include-fixer",
    "//${llvm_build_root}/secondary/clang/lib/AST",
    "//${llvm_build_root}/secondary/clang/lib/Basic",
    "//${llvm_build_root}/secondary/clang/lib/Frontend",
    "//${llvm_build_root}/secondary/clang/lib/Parse",
    "//${llvm_build_root}/secondary/clang/lib/Sema",
    "//${llvm_build_root}/secondary/clang/lib/Tooling",
    "//${llvm_build_root}/build/libs/pthread",
  ]

  sources = [ "IncludeFixerPlugin.cpp" ]
}
